updated code for slider

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="slidermain">
         <div class="slider-container">
             <div class="img-container"></div>
-            <i class="fa-solid fa-angles-left btn prev"></i>
-        <i class="fa-solid fa-angles-right btn next"></i>
+            <i class="fa-solid fa-chevron-left btn prev"></i>
+            <i class="fa-solid fa-chevron-right btn next"></i>
         </div>
         <div class="navigation-dots"></div>
     </div>
